Use collection utils to reduce duplication